array.island.Island.scala.error
Compilation error:
Island:19: error: Int.type does not take parameters
    };return Int(nbUn/2) + Int(nbDeux/2) + Int(nbTrois/2)
                ^Island:19: error: Int.type does not take parameters
    };return Int(nbUn/2) + Int(nbDeux/2) + Int(nbTrois/2)
                              ^Island:19: error: Int.type does not take parameters
    };return Int(nbUn/2) + Int(nbDeux/2) + Int(nbTrois/2)
                                              ^Island:10: error: type mismatch;
 found   : Unit
 required: Int
  };for (i <- 1 to taille) {
           ^